# simple-stock-tracing-cli

./: Cargo.toml  README.md
src/: lib.rs  main.rs
