[package]
name = "simple-stock-tracing-cli"
version = "0.1.0"
authors = ["Alexei Pastuchov <alexei.pastuchov@ionos.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = "3.0.0-beta.2"
tokio-test = { version = "0.4.2" }
yahoo_finance_api = { version = "1.0.5", features = ["blocking"] }

